css, popup tabs, overflow fix

--- a/www/css/less/elements/popup.less
+++ b/www/css/less/elements/popup.less
@@ -41,7 +41,6 @@
 	height: 26px;
 	left: 10vw;
 	top: calc(10% - 26px);
-	overflow-y: auto;
 	z-index: 90004;
 	
 	.popup-tab-item {
